--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
-<!DOCTYPE HTML>
-  <html>
-    <head>
-      <meta charset="utf-8">
-      <title>Phoenix Hill Farmers' Market</title>
-      <link rel="stylesheet" href="css/normalize.css">
-      <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-      <header>
-        <a href="index.html" id="logo">
-          <h1>Phoenix Hill Farmers' Market</h1>
-        </a>
-      </header>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="vendors.html">Vendors</a></li>
-          <li><a href="calander.html">Calander</a><li>
-          <li><a href="recipes.html">Recipes</a><li>
-        </ul>
-      </nav>
-      <footer>
-        <a href="https://www.instagram.com/phoenixhillfarmersmarket"><img src="" alt="instagram logo"></a>
-        <a href="https://www.facebook.com/PhoenixHillNuLuFarmersMarket"><img src="" alt="facebook logo"></a>
-        <a href="https://www.twitter.com/phoenixhillfarmersmarket"><img src"" alt="twitter logo"></a>
-        <p>&copy; 2017 Phoenix Hill Farmers' Market</p>
-      </footer>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+</head>
+<header class="header">
+<h1 class="logo"><img src="img/marketlogo.jpg" alt="some_text"></h1>
+<body>
+  <!–– menu ––>
+	<div class="content">
+	<div id="menu">
+		<ul>
+			<li class="selected"><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="calendar.html">Calendar</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="recipes.html">Recipes</a></li>
+		</ul>
+	</header>
+	</div>
+	<p>The first market of 2017 will be Tuesday May 16th from 3-6pm. <br> We are located in the parking lot of Fresh Start Grower's Supply at 1007 E. <br>Jefferson at Baxter in Louisville, Ky. <br>Can't wait to see you there!</p>
+  <!–– footer ––>
+	<footer class="footer">
+			<div class="social">
+			<a href="https://www.instagram.com/phoenixhillfarmersmarket"><img src="img/blueinstagram.svg" alt="instagram logo"></a>
+			</div>
+			<div class="social">
+			<a href="https://www.facebook.com/PhoenixHillNuLuFarmersMarket"><img src="img/facebook.svg" alt="facebook logo"></a>
+			<p>&copy; 2017 Phoenix Hill Farmers' Market</p>
+		</footer>
+	</div>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+</body>
+</html>
